changed stream().toList() to stream().collect(Collectors.toList() to pass tests